<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressSearch"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtSarch"
            android:text="@string/Buscando__"
            android:gravity="center|left"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/rvSearch"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelar"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparente"
            android:text="@string/Cancelar"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBuscar"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparente"
            android:text="@string/Buscar"
            android:visibility="gone"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAceptar"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparente"
            android:text="@string/Aceptar"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>